--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+5-20 [各界人士庆贺江天勇五十岁生日  为其自由呼吁](/articles/rfa/1045549.md)
+
+5-20 [中国男足备战世界杯 不忘加强党史教育](/articles/rfa/1045550.md)
+
+5-20 [疫情造成加拿大2.5万人死亡  向中国追责声浪不断](/articles/rfa/1045551.md)
+
 5-20 [美舰再航行台海 美日法澳军演 中国军舰越冲绳](/articles/rfa/1045552.md)
 
 5-19 [蔡英文第二任期周年 两岸“春暖花开”遥遥无期](/articles/rfa/1045553.md)
@@ -594,10 +600,4 @@
 4-16 [中国一季度GDP两年平均只增长5%  出口带动反弹不能持续](/articles/rfa/1045847.md)
 
 4-16 [拜登撤军阿富汗应对中国挑战          博明、余茂春呼吁“对等”应对中共](/articles/rfa/1045848.md)
-
-4-16 [中共中央政治局常委汪洋访内蒙：再强调民族共同体意识](/articles/rfa/1045849.md)
-
-4-16 [贸易公平兼顾环保  戴琪：美国仍是规则制定者](/articles/rfa/1045850.md)
-
-4-16 [美促各国再捐二十亿助全球疫苗分配 中国疫苗外交恐受挫](/articles/rfa/1045851.md)
 
