--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-20 [欧盟议会敦促北京：要投资协议，就要马上取消制裁](/articles/voa/1040695.md)
+
 5-20 [欧盟议会敦促北京：要投资协议，就要马上取消制裁](/articles/voa/1040696.md)
 
 5-20 [澳大利亚铁矿石价格大涨，中国寻求铁矿石进口“多元化”](/articles/voa/1040697.md)
@@ -598,6 +600,4 @@
 5-6 [China suspends economic dialogue with Australia as relations curdle](/articles/voa/1040993.md)
 
 5-6 [民调：过七成中国民众认为中国已足够民主 专家：言论不自由，不敢说真话](/articles/voa/1040994.md)
-
-5-6 [鲍彤忆文革：习仲勋是毛泽东“大大的受害者”](/articles/voa/1040995.md)
 
