--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-20 [拜登：美必须捍卫北极和南中国海的海上航道](/articles/voa/1040692.md)
+
+5-20 [拜登总统将在文在寅总统来访期间向一位美军韩战老兵颁发荣誉勋章](/articles/voa/1040693.md)
+
 5-20 [时事大家谈: 湖畔大学摘牌，私企梦想破灭？](/articles/voa/1040694.md)
 
 5-20 [欧盟议会敦促北京：要投资协议，就要马上取消制裁](/articles/voa/1040695.md)
@@ -596,8 +600,4 @@
 5-6 [台湾-澳门跨籍同性婚姻官司胜诉 户政机关需准许结婚登记申请](/articles/voa/1040990.md)
 
 5-6 [中国经济统战“地方包围中央”，澳大利亚：“此路不通”](/articles/voa/1040991.md)
-
-5-6 [美国预计到7月底新冠肺炎死亡人数将急剧下降](/articles/voa/1040992.md)
-
-5-6 [China suspends economic dialogue with Australia as relations curdle](/articles/voa/1040993.md)
 
