--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-20 [美国官员：与中俄疫苗外交不同 美将按需要向全球捐赠疫苗](/articles/voa/1040689.md)
+
 5-20 [美国会智库报告：中国未遵守防核扩散承诺](/articles/voa/1040690.md)
 
 5-20 [白宫要义：拜登告诉美军： 捍卫包括南中国海等水域自由航行攸关美国利益](/articles/voa/1040691.md)
@@ -598,6 +600,4 @@
 5-6 [辉瑞和生物科技将向东京奥运会运动员捐赠疫苗](/articles/voa/1040987.md)
 
 5-6 [中国驳回G7人权批评 指其干涉内政](/articles/voa/1040988.md)
-
-5-6 [“担忧”记者在华报道环境 “创新经济论坛”11月重返新加坡举行](/articles/voa/1040989.md)
 
