--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-20 [美众议院表决批准建立调查冲击国会事件的委员会](/articles/voa/1040687.md)
+
+5-20 [内塔尼亚胡拒绝接受拜登发出的缓和加沙局势呼吁](/articles/voa/1040688.md)
+
 5-20 [美国官员：与中俄疫苗外交不同 美将按需要向全球捐赠疫苗](/articles/voa/1040689.md)
 
 5-20 [美国会智库报告：中国未遵守防核扩散承诺](/articles/voa/1040690.md)
@@ -596,8 +600,4 @@
 5-6 [防止仇恨亚裔暴力的自卫教程](/articles/voa/1040985.md)
 
 5-6 [脸书近期仍会封锁特朗普](/articles/voa/1040986.md)
-
-5-6 [辉瑞和生物科技将向东京奥运会运动员捐赠疫苗](/articles/voa/1040987.md)
-
-5-6 [中国驳回G7人权批评 指其干涉内政](/articles/voa/1040988.md)
 
