--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+5-20 [张一鸣宣布辞任字节跳动CEO，联合创始人梁汝波接任](/articles/nyt/1046844.md)
+
+5-20 [华裔少女被烧死悬案：FBI将以仇恨犯罪进行调查](/articles/nyt/1046845.md)
+
 5-20 [中国“祝融号”首次传回火星照片](/articles/nyt/1046846.md)
 
 5-20 [为总统挡子弹？美国特勤局的“糟糕历史”](/articles/nyt/1046847.md)
@@ -596,8 +600,4 @@
 2-26 [62年前俄罗斯徒步者命案：UFO、KGB还是雪崩？](/articles/nyt/1047142.md)
 
 2-26 [美国发财致富指南](/articles/nyt/1047143.md)
-
-2-26 [从语言开始，拜登政府对特朗普“拨乱反正”](/articles/nyt/1047144.md)
-
-2-26 [大熊猫真的是其他野生动物的“保护伞”吗？](/articles/nyt/1047145.md)
 
