--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-20 [拜登表示美海警队将发挥更大作用 公开警告中俄 赞扬与台湾合作](/articles/voa/1040683.md)
+
 5-20 [红色现象引人注目，文革是否会卷土重来？](/articles/voa/1040684.md)
 
 5-20 [专访NASA华裔科学家：美国航天事业强大的原因何在](/articles/voa/1040685.md)
@@ -598,6 +600,4 @@
 5-7 [黄之锋等4名社运人士参与去年六四未经批准集结 判囚4至10个月](/articles/voa/1040981.md)
 
 5-7 [时事大家谈: 北京加紧扩张军力，欲称霸世界还是保政权？](/articles/voa/1040982.md)
-
-5-7 [布林肯称西方必须对中国投资“非常谨慎”](/articles/voa/1040983.md)
 
