--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-20 [中式没品笑话百科｜昨夜战况速报：我被“上帝之鹰”发动了1技能](/articles/cdt/382366.md)
+
 5-20 [德国之声 | 台湾苹果日报宣布停刊  港府冻结黎智英财产](/articles/cdt/382376.md)
 
 5-20 [联合早报 | 美媒：苹果通过五方式对中国政府让步](/articles/cdt/382377.md)
@@ -598,6 +600,4 @@
 4-15 [【404文库】知乎网友｜福岛废水不会对我国造成太大影响](/articles/cdt/383728.md)
 
 4-15 [【异闻观止】环球时报｜境外反华势力拉拢内地学生内幕：“田某自8岁起就收听反华节目”](/articles/cdt/383730.md)
-
-4-14 [快科技｜中国游戏审查评分制已试行，低分游戏将被退回](/articles/cdt/383733.md)
 
