--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-20 [黄章晋｜不做新闻已经很多年](/articles/cdt/382365.md)
+
 5-20 [中式没品笑话百科｜昨夜战况速报：我被“上帝之鹰”发动了1技能](/articles/cdt/382366.md)
 
 5-20 [德国之声 | 台湾苹果日报宣布停刊  港府冻结黎智英财产](/articles/cdt/382376.md)
@@ -598,6 +600,4 @@
 4-15 [米兔槽 | 女权被炸号，我起诉了微博，看看新浪回应了啥？！请你帮我三件事](/articles/cdt/383724.md)
 
 4-15 [【404文库】知乎网友｜福岛废水不会对我国造成太大影响](/articles/cdt/383728.md)
-
-4-15 [【异闻观止】环球时报｜境外反华势力拉拢内地学生内幕：“田某自8岁起就收听反华节目”](/articles/cdt/383730.md)
 
