--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-20 [日忧中国军力超前 防长称台湾情况「我们的问题」](/articles/dw/1042381.md)
+
 5-20 [端点星案开庭未宣判刑期 家属：北京只允许一种声音](/articles/dw/1042382.md)
 
 5-20 [技术问题 中国推迟发射「天舟二号」货运飞船](/articles/dw/1042383.md)
@@ -598,6 +600,4 @@
 5-2 [中国蝉联德国最大贸易伙伴 德企太依赖中国？](/articles/dw/1042679.md)
 
 5-2 [继续对欧盟钢铝征关税？拜登面临两难](/articles/dw/1042680.md)
-
-5-2 [欧盟各国为何无法统一对疫苗护照的态度？](/articles/dw/1042681.md)
 
