--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-20 [印度新冠悲剧中，一对同生共死的双胞胎兄弟](/articles/nyt/1046842.md)
+
 5-20 [一百多年前，他用口罩帮助中国控制住一场瘟疫](/articles/nyt/1046843.md)
 
 5-20 [张一鸣宣布辞任字节跳动CEO，联合创始人梁汝波接任](/articles/nyt/1046844.md)
@@ -598,6 +600,4 @@
 3-1 [当代中国文字狱事件：从上访者到“侮辱英烈”](/articles/nyt/1047140.md)
 
 3-1 [简报：“中国文字狱盘点”引关注；缅甸血腥镇压抗议活动](/articles/nyt/1047141.md)
-
-2-26 [62年前俄罗斯徒步者命案：UFO、KGB还是雪崩？](/articles/nyt/1047142.md)
 
