--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-20 [一座被冻结在过去的北极圈苏联“鬼镇”](/articles/nyt/1046841.md)
+
 5-20 [印度新冠悲剧中，一对同生共死的双胞胎兄弟](/articles/nyt/1046842.md)
 
 5-20 [一百多年前，他用口罩帮助中国控制住一场瘟疫](/articles/nyt/1046843.md)
@@ -598,6 +600,4 @@
 3-1 [47名香港亲民主人士被控“串谋颠覆”](/articles/nyt/1047139.md)
 
 3-1 [当代中国文字狱事件：从上访者到“侮辱英烈”](/articles/nyt/1047140.md)
-
-3-1 [简报：“中国文字狱盘点”引关注；缅甸血腥镇压抗议活动](/articles/nyt/1047141.md)
 
