--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-20 [中国在塞拉利昂雨林中建造渔港的交易遭到强烈抵制](/articles/voa/1040678.md)
+
+5-20 [爱立信的中国雄心或因华为禁令遇挫](/articles/voa/1040679.md)
+
+5-20 [拜登、文在寅联合声明将提台湾，强度将不亚于美日联合声明](/articles/voa/1040680.md)
+
 5-20 [美军舰驶入“西沙群岛领海”展示航行自由 中国指责美国搞霸权](/articles/voa/1040681.md)
 
 5-20 [拜登寻求巴以停火 共和党人担心美国暂停军援向以色列施压](/articles/voa/1040682.md)
@@ -594,10 +600,4 @@
 5-7 [巴勒斯坦权力机构特使无视捣毁清真寺证据 称新疆清真寺数目众多](/articles/voa/1040976.md)
 
 5-7 [美军司令官：中国威胁也可能来自大西洋](/articles/voa/1040977.md)
-
-5-7 [新申请失业救济的美国人上周大幅减少](/articles/voa/1040978.md)
-
-5-7 [美参议院一委员会将审议一项与中国进行科技竞争的重大法案](/articles/voa/1040979.md)
-
-5-7 [美军部署印太信息战部队 应对北京的宣传攻势](/articles/voa/1040980.md)
 
