--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-20 [台湾邦交国洪都拉斯威胁美国不给疫苗就断交](/articles/rfa/1045542.md)
+
+5-20 [张一鸣卸任“字节跳动”CEO   创办人弃船惹民众猜疑](/articles/rfa/1045543.md)
+
 5-20 [美众院通过反仇亚法案    区分亚裔及中共成为课题](/articles/rfa/1045544.md)
 
 5-20 [文在寅访美：夹在美中朝之间的他将做何抉择？](/articles/rfa/1045545.md)
@@ -596,8 +600,4 @@
 4-17 [欧中相互制裁之际  法德中三边气候会议惹争议](/articles/rfa/1045840.md)
 
 4-16 [辽宁号怎么了？盛传海上定点停留一天引发热议](/articles/rfa/1045841.md)
-
-4-16 [谏言中共改革被控“颠覆” 党校教师子肃出狱生计陷困境](/articles/rfa/1045842.md)
-
-4-16 [香港《苹果日报》遭全方位攻击    左报倡“依法取缔”](/articles/rfa/1045843.md)
 
