--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-20 [张一鸣卸任字节跳动CEO  “为公司创造更多可能“](/articles/dw/1042378.md)
+
 5-20 [2020年美中投资创12年来新低](/articles/dw/1042379.md)
 
 5-20 [长平观察：中国“屌丝”的“内卷”与“躺平“](/articles/dw/1042380.md)
@@ -598,6 +600,4 @@
 5-2 [福建将放宽两岸隔离措施 两岸网民均表强烈不满](/articles/dw/1042676.md)
 
 5-2 [禁止本国公民从印度返国 澳出台最严格入境禁令](/articles/dw/1042677.md)
-
-5-2 [德国融合部长会议：降低移民子女入籍门槛](/articles/dw/1042678.md)
 
