--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-20 [政治红线无从掌握 香港“黄营”工会危机四伏](/articles/voa/1040676.md)
+
+5-20 [担心负债过大 即将上任的萨摩亚新总理称会搁置中国投资港口计划](/articles/voa/1040677.md)
+
 5-20 [中国在塞拉利昂雨林中建造渔港的交易遭到强烈抵制](/articles/voa/1040678.md)
 
 5-20 [爱立信的中国雄心或因华为禁令遇挫](/articles/voa/1040679.md)
@@ -596,8 +600,4 @@
 5-7 [分析：美国撤军对中国在阿富汗利益造成挑战](/articles/voa/1040974.md)
 
 5-7 [欧盟计划允许美国加拿大挪威参加军事项目](/articles/voa/1040975.md)
-
-5-7 [巴勒斯坦权力机构特使无视捣毁清真寺证据 称新疆清真寺数目众多](/articles/voa/1040976.md)
-
-5-7 [美军司令官：中国威胁也可能来自大西洋](/articles/voa/1040977.md)
 
