--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-20 [蔡英文五二零未发表谈话 视察国军指示贯彻防疫维持战备](/articles/rfa/1045541.md)
+
 5-20 [台湾邦交国洪都拉斯威胁美国不给疫苗就断交](/articles/rfa/1045542.md)
 
 5-20 [张一鸣卸任“字节跳动”CEO   创办人弃船惹民众猜疑](/articles/rfa/1045543.md)
@@ -598,6 +600,4 @@
 4-17 [旅芬学者王展被捕一年半仍失联  看守所拒绝透露情况](/articles/rfa/1045839.md)
 
 4-17 [欧中相互制裁之际  法德中三边气候会议惹争议](/articles/rfa/1045840.md)
-
-4-16 [辽宁号怎么了？盛传海上定点停留一天引发热议](/articles/rfa/1045841.md)
 
