--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-20 [首例国安法案件庭审不设陪审团，香港百年司法传统被颠覆](/articles/voa/1040672.md)
+
 5-20 [红色现象引人注目，文革是否会卷土重来？](/articles/voa/1040673.md)
 
 5-20 [中国天舟二号货运飞船因技术原因推迟发射](/articles/voa/1040674.md)
@@ -598,6 +600,4 @@
 5-7 [英国撤走军舰 英法捕鱼纠纷缓解](/articles/voa/1040970.md)
 
 5-7 [白宫要义: 拜登: 别让中国抢美国饭碗，加强投资买美国货](/articles/voa/1040971.md)
-
-5-7 [如何避免美中为台湾而战？美学者十年后再提弃台论 被讽应“改行”](/articles/voa/1040972.md)
 
