--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-20 [忧债务庞大 萨摩亚叫停中国一带一路工程](/articles/rfa/1045539.md)
+
+5-20 [中国钢材价格飞涨  企业员工被迫“休假”](/articles/rfa/1045540.md)
+
 5-20 [蔡英文五二零未发表谈话 视察国军指示贯彻防疫维持战备](/articles/rfa/1045541.md)
 
 5-20 [台湾邦交国洪都拉斯威胁美国不给疫苗就断交](/articles/rfa/1045542.md)
@@ -596,8 +600,4 @@
 4-17 [拜登会见菅义伟   深入讨论中国议题](/articles/rfa/1045837.md)
 
 4-17 [专访立陶宛议员：被中共制裁表示我做对了](/articles/rfa/1045838.md)
-
-4-17 [旅芬学者王展被捕一年半仍失联  看守所拒绝透露情况](/articles/rfa/1045839.md)
-
-4-17 [欧中相互制裁之际  法德中三边气候会议惹争议](/articles/rfa/1045840.md)
 
