--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-21 [联合国即将就以巴冲突问题举行会议](/articles/voa/1040669.md)
+
+5-20 [中国船只现身东太平洋 引夏威夷军民担忧](/articles/voa/1040670.md)
+
+5-20 [台湾总统蔡英文有惊无险，病毒测试阴性](/articles/voa/1040671.md)
+
 5-20 [首例国安法案件庭审不设陪审团，香港百年司法传统被颠覆](/articles/voa/1040672.md)
 
 5-20 [红色现象引人注目，文革是否会卷土重来？](/articles/voa/1040673.md)
@@ -594,10 +600,4 @@
 5-7 [“殴打、性侵... 北京要摧毁我们“ 新疆集中营幸存者首度作证国会](/articles/voa/1040967.md)
 
 5-7 [五角大楼：塔利班在阿富汗获胜“并非必然结果”](/articles/voa/1040968.md)
-
-5-7 [美国务卿布林肯访基辅 力挺乌克兰](/articles/voa/1040969.md)
-
-5-7 [英国撤走军舰 英法捕鱼纠纷缓解](/articles/voa/1040970.md)
-
-5-7 [白宫要义: 拜登: 别让中国抢美国饭碗，加强投资买美国货](/articles/voa/1040971.md)
 
