--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-21 [欧洲议会599票赞成   冻结欧中投资协定](/articles/rfa/1045538.md)
+
 5-20 [忧债务庞大 萨摩亚叫停中国一带一路工程](/articles/rfa/1045539.md)
 
 5-20 [中国钢材价格飞涨  企业员工被迫“休假”](/articles/rfa/1045540.md)
@@ -598,6 +600,4 @@
 4-17 [李怀庆二审多处程序违法    耿和担心高智晟已被迫害致死](/articles/rfa/1045836.md)
 
 4-17 [拜登会见菅义伟   深入讨论中国议题](/articles/rfa/1045837.md)
-
-4-17 [专访立陶宛议员：被中共制裁表示我做对了](/articles/rfa/1045838.md)
 
