--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-21 [欧洲议会高票通过决议 “冻结”欧中投资协定审议](/articles/voa/1040666.md)
+
+5-21 [证据显示中石油向缅甸军政府出口航空燃料](/articles/voa/1040667.md)
+
+5-21 [新加坡香格里拉对话会因新冠疫情取消](/articles/voa/1040668.md)
+
 5-21 [联合国即将就以巴冲突问题举行会议](/articles/voa/1040669.md)
 
 5-20 [中国船只现身东太平洋 引夏威夷军民担忧](/articles/voa/1040670.md)
@@ -594,10 +600,4 @@
 5-7 [4月份美国经济或创造出近百万工作机会](/articles/voa/1040964.md)
 
 5-7 [奥斯汀：美国没有计划击落中国火箭](/articles/voa/1040965.md)
-
-5-7 [中国对全球关键稀有矿产资源的控制远不止稀土](/articles/voa/1040966.md)
-
-5-7 [“殴打、性侵... 北京要摧毁我们“ 新疆集中营幸存者首度作证国会](/articles/voa/1040967.md)
-
-5-7 [五角大楼：塔利班在阿富汗获胜“并非必然结果”](/articles/voa/1040968.md)
 
