--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-21 [北京维权人士王国齐流浪街头  屡遭警察骚扰](/articles/rfa/1045537.md)
+
 5-21 [欧洲议会599票赞成   冻结欧中投资协定](/articles/rfa/1045538.md)
 
 5-20 [忧债务庞大 萨摩亚叫停中国一带一路工程](/articles/rfa/1045539.md)
@@ -598,6 +600,4 @@
 4-17 [拜登菅义伟结束会谈  双方同意维护台海和平](/articles/rfa/1045835.md)
 
 4-17 [李怀庆二审多处程序违法    耿和担心高智晟已被迫害致死](/articles/rfa/1045836.md)
-
-4-17 [拜登会见菅义伟   深入讨论中国议题](/articles/rfa/1045837.md)
 
