--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-21 [专家：抗衡中国在拉美势力  美须成为“好邻居”](/articles/rfa/1045535.md)
+
+5-21 [“恶俗维基案”维持原判 家长备受跨省打压](/articles/rfa/1045536.md)
+
 5-21 [北京维权人士王国齐流浪街头  屡遭警察骚扰](/articles/rfa/1045537.md)
 
 5-21 [欧洲议会599票赞成   冻结欧中投资协定](/articles/rfa/1045538.md)
@@ -596,8 +600,4 @@
 4-19 [刘长乐售出凤凰卫视所有股份  中资加快港媒“央企化”步伐](/articles/rfa/1045833.md)
 
 4-19 [陕西律师常玮平被捕遭异地羁押  余文生狱中遭群殴](/articles/rfa/1045834.md)
-
-4-17 [拜登菅义伟结束会谈  双方同意维护台海和平](/articles/rfa/1045835.md)
-
-4-17 [李怀庆二审多处程序违法    耿和担心高智晟已被迫害致死](/articles/rfa/1045836.md)
 
