--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-21 [众议员提出议案，要求拜登采取行动解决在新疆发生的“种族灭绝”](/articles/voa/1040660.md)
+
+5-21 [美一参议员提议禁止联邦退休金计划对中国投资](/articles/voa/1040661.md)
+
+5-21 [美宇航局计划让“机智号”火星直升机进行第六次飞行](/articles/voa/1040662.md)
+
 5-21 [拜登总统签署旨在打击针对亚裔仇恨犯罪的法案](/articles/voa/1040663.md)
 
 5-21 [再添一笔！立陶宛议会认定中国在新疆施行“种族灭绝”](/articles/voa/1040664.md)
@@ -594,10 +600,4 @@
 5-7 [中国即将通过海上交通安全法修订案 持续强化对有争议亚洲海域控制](/articles/voa/1040958.md)
 
 5-7 [印度日增新冠确诊病例再创新高 反对党领袖称全国封锁“不可避免”](/articles/voa/1040959.md)
-
-5-7 [守护六四烛光被判入狱 美国务卿呼吁释放香港活动人士](/articles/voa/1040960.md)
-
-5-7 [中国强调保障粮食安全是事关国家安全的首要任务](/articles/voa/1040961.md)
-
-5-7 [台湾半导体实力成“矽盾”，中国避战？](/articles/voa/1040962.md)
 
