--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-21 [《毛泽东选集》缘何受中国大学生追捧？](/articles/rfa/1045534.md)
+
 5-21 [专家：抗衡中国在拉美势力  美须成为“好邻居”](/articles/rfa/1045535.md)
 
 5-21 [“恶俗维基案”维持原判 家长备受跨省打压](/articles/rfa/1045536.md)
@@ -598,6 +600,4 @@
 4-19 [辽宁舰与罗斯福号最近距离400公里 台学者：共军未采反制措施](/articles/rfa/1045832.md)
 
 4-19 [刘长乐售出凤凰卫视所有股份  中资加快港媒“央企化”步伐](/articles/rfa/1045833.md)
-
-4-19 [陕西律师常玮平被捕遭异地羁押  余文生狱中遭群殴](/articles/rfa/1045834.md)
 
