--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-21 [竞选纽约市长，杨安泽能否有效应对反亚裔仇恨？](/articles/voa/1040651.md)
+
 5-21 [美专家：台湾是美半导体及高科技重要来源，若落入中国之手不堪设想](/articles/voa/1040652.md)
 
 5-21 [拜登：以色列和哈马斯开始“相互、无条件停火”](/articles/voa/1040653.md)
@@ -598,6 +600,4 @@
 5-8 [联邦大陪审团起诉涉弗洛伊德死亡案的肖文等四名前警察侵犯民权](/articles/voa/1040949.md)
 
 5-8 [一名华人在美国的维权之路](/articles/voa/1040950.md)
-
-5-8 [世界“顶回”中国 (2): 印太国家向美国靠近](/articles/voa/1040951.md)
 
