--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-21 [以色列和哈马斯达成加沙停火协议](/articles/dw/1042365.md)
+
 5-21 [美韩峰会聚焦朝鲜 抗中与否有分歧](/articles/dw/1042366.md)
 
 5-21 [德外长访问以色列 谴责哈马斯“大规模“攻击](/articles/dw/1042367.md)
@@ -598,6 +600,4 @@
 5-3 [捍卫新闻自由——冲击灵魂的照片](/articles/dw/1042663.md)
 
 5-3 [德国之声2021年言论自由奖获得者奥武里: 为无声者抗争](/articles/dw/1042664.md)
-
-5-3 [给亲信镀金交椅？大选前德部长新增高级公务员](/articles/dw/1042665.md)
 
