--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-21 [立陶宛议会：中国对维吾尔人「种族灭绝」](/articles/dw/1042364.md)
+
 5-21 [以色列和哈马斯达成加沙停火协议](/articles/dw/1042365.md)
 
 5-21 [美韩峰会聚焦朝鲜 抗中与否有分歧](/articles/dw/1042366.md)
@@ -598,6 +600,4 @@
 5-3 [德语媒体：欧洲，请擦亮眼睛！](/articles/dw/1042662.md)
 
 5-3 [捍卫新闻自由——冲击灵魂的照片](/articles/dw/1042663.md)
-
-5-3 [德国之声2021年言论自由奖获得者奥武里: 为无声者抗争](/articles/dw/1042664.md)
 
