--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,12 @@
 路透
 ------
 
+5-21 [美商务部长称政府或能协助提高芯片市场透明度](/articles/reuters/1037819.md)
+
+5-21 [中国对虚拟货币出招在全球掀起血雨腥风 国内玩家却不痛不痒](/articles/reuters/1037820.md)
+
+5-21 [韩国总统文在寅将成为拜登在白宫接待的第二位亚洲领导人](/articles/reuters/1037821.md)
+
 5-21 [4月人民币实际有效汇率创四个月新低 名义汇率结束三连升--BIS](/articles/reuters/1037822.md)
 
 5-21 [中国重要财经新闻一周回顾](/articles/reuters/1037823.md)
@@ -594,10 +600,4 @@
 5-14 [焦点：美国最大燃料管道关闭六日后终于恢复 市场料在下周前回归正常](/articles/reuters/1038117.md)
 
 5-14 [独家：今年虚拟世界犯罪下滑 但去中心化金融诈骗创新高-报告](/articles/reuters/1038118.md)
-
-5-14 [软银社长孙正义称对于东京奥运感到“担心”](/articles/reuters/1038119.md)
-
-5-14 [路透测算的人民币中间价料开在6.4499元附近 较上日升113点](/articles/reuters/1038120.md)
-
-5-14 [中芯国际首季销售额按季增长12.5% 料上半年营收约24亿美元](/articles/reuters/1038121.md)
 
