--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-21 [华为转战云端，美中或在亚非拉开启 “云”竞争](/articles/voa/1040650.md)
+
 5-21 [竞选纽约市长，杨安泽能否有效应对反亚裔仇恨？](/articles/voa/1040651.md)
 
 5-21 [美专家：台湾是美半导体及高科技重要来源，若落入中国之手不堪设想](/articles/voa/1040652.md)
@@ -598,6 +600,4 @@
 5-8 [中国称火箭碎片不太可能造成损害](/articles/voa/1040948.md)
 
 5-8 [联邦大陪审团起诉涉弗洛伊德死亡案的肖文等四名前警察侵犯民权](/articles/voa/1040949.md)
-
-5-8 [一名华人在美国的维权之路](/articles/voa/1040950.md)
 
