--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+5-21 [中国网信办通报抖音、快手等105款App违法违规收集使用个人信息情况](/articles/reuters/1037817.md)
+
+5-21 [中国部分政府机关禁止员工在办公区停放特斯拉汽车--消息人士](/articles/reuters/1037818.md)
+
 5-21 [美商务部长称政府或能协助提高芯片市场透明度](/articles/reuters/1037819.md)
 
 5-21 [中国对虚拟货币出招在全球掀起血雨腥风 国内玩家却不痛不痒](/articles/reuters/1037820.md)
@@ -596,8 +600,4 @@
 5-14 [Colonial早在网络袭击发生后几小时内就向黑客支付了近500万美元--彭博新闻](/articles/reuters/1038115.md)
 
 5-14 [阿里影业推出内容IP潮流玩具品牌 将持续业务板块多元化发展](/articles/reuters/1038116.md)
-
-5-14 [焦点：美国最大燃料管道关闭六日后终于恢复 市场料在下周前回归正常](/articles/reuters/1038117.md)
-
-5-14 [独家：今年虚拟世界犯罪下滑 但去中心化金融诈骗创新高-报告](/articles/reuters/1038118.md)
 
