--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-21 [胡椒喷雾、报警器和电击枪：亚裔美国人的新现实](/articles/nyt/1046837.md)
+
 5-21 [香港抗议：在街头被“消失”，在艺术中被重现](/articles/nyt/1046838.md)
 
 5-21 [美国海关因新疆棉问题拦截一批优衣库衬衫](/articles/nyt/1046839.md)
@@ -598,6 +600,4 @@
 3-1 [养老院频繁“爆雷”背后，中国的老龄化危机](/articles/nyt/1047135.md)
 
 3-1 [赵婷创造历史，首位亚洲女导演问鼎金球奖](/articles/nyt/1047136.md)
-
-3-1 [离婚冷静期引反弹，中国多地离婚申请率猛增](/articles/nyt/1047137.md)
 
