--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-21 [德国之声 | 长平观察：中国“屌丝”的“内卷”与“躺平“](/articles/cdt/382340.md)
+
 5-21 [【旧闻重温】墙外楼 | 老虎庙 : 我认识的境外势力](/articles/cdt/382344.md)
 
 5-20 [小弦的自留地｜第二次开庭前，法庭内外发生的一切](/articles/cdt/382348.md)
@@ -598,6 +600,4 @@
 4-15 [【404文库】鱼眼观察｜第二个“金德强”！震撼场景再次上演](/articles/cdt/383707.md)
 
 4-15 [全现在 | 割腕之后，他的卡车没有超重](/articles/cdt/383717.md)
-
-4-15 [一苇杭之渡彼岸 | 疫情中的高耀洁：如果我走了，骨灰一定要回河南](/articles/cdt/383718.md)
 
