--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-21 [美加大监管力度 中概股在美上市为何不减反增？](/articles/voa/1040648.md)
+
 5-21 [00后因言获罪 王靖渝赴美中转迪拜被捕面临遣返](/articles/voa/1040649.md)
 
 5-21 [华为转战云端，美中或在亚非拉开启 “云”竞争](/articles/voa/1040650.md)
@@ -598,6 +600,4 @@
 5-8 [美国新冠病例持续下降 白宫抗疫团队聚焦让更多人接种疫苗](/articles/voa/1040946.md)
 
 5-8 [布林肯: 美国呼吁世卫总干事邀请台湾参加世界卫生大会](/articles/voa/1040947.md)
-
-5-8 [中国称火箭碎片不太可能造成损害](/articles/voa/1040948.md)
 
