--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-21 [继美日共同声明 美韩首脑峰会联合声明将提台湾](/articles/rfa/1045532.md)
+
 5-21 [《港区国安法》下首个六四   港人如何延续烛光？](/articles/rfa/1045533.md)
 
 5-21 [《毛泽东选集》缘何受中国大学生追捧？](/articles/rfa/1045534.md)
@@ -598,6 +600,4 @@
 4-19 [北京市检察院政治部主任马立娜因 “抑郁症”坠楼身亡](/articles/rfa/1045830.md)
 
 4-19 [美日峰会强调台海重要性 台学者：将间接促成“四方会谈+台湾”](/articles/rfa/1045831.md)
-
-4-19 [辽宁舰与罗斯福号最近距离400公里 台学者：共军未采反制措施](/articles/rfa/1045832.md)
 
