--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-21 [骚客文艺｜佟丽娅官宣了，从来没有任何一个时代像今天这样为离婚鼓掌](/articles/cdt/382330.md)
+
 5-21 [立场新闻 | 守住香港的荣休主教陈日君：我不会走、不可走、不应走](/articles/cdt/382333.md)
 
 5-21 [德国之声 | 王靖渝迪拜转机时被捕 恐遭遣返回中国](/articles/cdt/382335.md)
@@ -598,6 +600,4 @@
 4-16 [【立此存照】“知网？是个什么恨国公知网站吗？”](/articles/cdt/383673.md)
 
 4-16 [北青深一度｜打官司，要回那笔彩礼](/articles/cdt/383675.md)
-
-4-17 [【CDT敏感词周报】第二十期：肖美丽、国家安全日、核废水、反诈中心](/articles/cdt/383678.md)
 
