--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-22 [从苏联氢弹之父到持不同政见者 萨哈罗夫百年诞辰](/articles/voa/1040641.md)
+
+5-21 [被拘押两年多后 澳籍华裔作家杨恒均终于等来开庭审理](/articles/voa/1040642.md)
+
+5-21 [中国称抖音等105款应用程序违法违规收集使用个人信息](/articles/voa/1040643.md)
+
 5-21 [安全环境今非昔比 日本决定突破遵守几十年的军费限制](/articles/voa/1040644.md)
 
 5-21 [最新全球疫情：印度单日病例超过259,000 阿根廷宣布周六起严格封城](/articles/voa/1040645.md)
@@ -594,10 +600,4 @@
 5-8 [中国敦促联合国成员国不要参加下周有关新疆的活动](/articles/voa/1040939.md)
 
 5-8 [美研发中心预计中国火箭残骸将于周日凌晨回落](/articles/voa/1040940.md)
-
-5-8 [参议院中国法案拟设立“首席制造官”职位](/articles/voa/1040941.md)
-
-5-8 [美众议员推出法案 要阻止中共在美大学从事间谍和盗窃活动](/articles/voa/1040942.md)
-
-5-8 [国会共和党人致函司法部 反对拜登政府学术特赦计划](/articles/voa/1040943.md)
 
