--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-21 [台湾疫情加剧  美台卫生部长通话支持台湾获得疫苗](/articles/rfa/1045530.md)
+
 5-21 [武汉弘芯翻版？又见598亿泉芯芯片项目烂尾](/articles/rfa/1045531.md)
 
 5-21 [继美日共同声明 美韩首脑峰会联合声明将提台湾](/articles/rfa/1045532.md)
@@ -598,6 +600,4 @@
 4-20 [北京小汤山强拆后续：业主数十次起诉镇政府  法院不予立案](/articles/rfa/1045828.md)
 
 4-20 [格桑坚参：从中共统战干部到争取西藏自由的推手](/articles/rfa/1045829.md)
-
-4-19 [北京市检察院政治部主任马立娜因 “抑郁症”坠楼身亡](/articles/rfa/1045830.md)
 
