--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-22 [立陶宛国会认定：中国对新疆维吾尔人犯下种族灭绝罪](/articles/rfa/1045527.md)
+
 5-22 [港府控台“粗暴干预香港事务”     台陆委会驳斥](/articles/rfa/1045528.md)
 
 5-22 [加拿大作家出书：中国当局在加涉洗钱、毒品和统战渗透](/articles/rfa/1045529.md)
@@ -598,6 +600,4 @@
 4-20 [文科生太多不利于社会转型?  文科重要性之辨](/articles/rfa/1045825.md)
 
 4-20 [香港民主人士遭判刑 英国欧盟质疑中国信守国际承诺](/articles/rfa/1045826.md)
-
-4-20 [反送中纪录片入围奥斯卡   “北京禁令帮了我们”](/articles/rfa/1045827.md)
 
