--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-22 [斯里兰卡议会同意设立专门机构监督中国开发项目](/articles/voa/1040637.md)
+
 5-22 [东京奥运前景堪忧？日本卫生高官称能否举行应尽早决断](/articles/voa/1040638.md)
 
 5-22 [华裔民权团体告特朗普 指“中国病毒”说带来精神伤害](/articles/voa/1040639.md)
@@ -598,6 +600,4 @@
 5-9 [欧盟驻中国大使：不寻求加剧与中国的紧张关系，正与中国合作为投资协定创造“政治空间”](/articles/voa/1040935.md)
 
 5-8 [新西兰外长：希望与中国发展成熟的关系 学者：新西兰需要连贯的外交政策](/articles/voa/1040936.md)
-
-5-8 [新话语权之争？美国将强力回击中国改变国际秩序意图](/articles/voa/1040937.md)
 
