--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-22 [日本或冻结对缅甸所有发展援助](/articles/rfi/1029427.md)
+
+5-22 [辉瑞，莫德纳和强生答应向贫困国家供应35亿剂新冠疫苗](/articles/rfi/1029428.md)
+
+5-22 [拜登政府把跨国公司税率从21%的征税目标降低到15% - 今日经济](/articles/rfi/1029429.md)
+
 5-22 [美国：拜登新法更好地打击种族暴力](/articles/rfi/1029430.md)
 
 5-22 [G20健康危机大会 富国捐疫苗 习近平砸30亿美元](/articles/rfi/1029431.md)
@@ -594,10 +600,4 @@
 5-17 [英国防疫限制大松绑 不再禁止亲人拥抱 – 法国国际广播电台 - RFI](/articles/rfi/1029725.md)
 
 5-17 [巴以冲突一周酿200人死亡 以军再发空袭 巴黎挺埃及斡旋调停 - 要闻解说](/articles/rfi/1029726.md)
-
-5-17 [梵蒂冈今任命香港教区主教：周守仁](/articles/rfi/1029727.md)
-
-5-17 [法国将开放露台用餐 餐厅业者忧雨势捣乱 – 法国国际广播电台 - RFI](/articles/rfi/1029728.md)
-
-5-17 [变异病毒构成隐忧 英国仍松绑防疫令 – 法国国际广播电台 - RFI](/articles/rfi/1029729.md)
 
