--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-22 [撑港网友发起“5201314”活动 指代“我愿荣光归香港”](/articles/rfa/1045526.md)
+
 5-22 [立陶宛国会认定：中国对新疆维吾尔人犯下种族灭绝罪](/articles/rfa/1045527.md)
 
 5-22 [港府控台“粗暴干预香港事务”     台陆委会驳斥](/articles/rfa/1045528.md)
@@ -598,6 +600,4 @@
 4-20 [新疆涉反人类罪行 人权组织吁UN介入调查](/articles/rfa/1045824.md)
 
 4-20 [文科生太多不利于社会转型?  文科重要性之辨](/articles/rfa/1045825.md)
-
-4-20 [香港民主人士遭判刑 英国欧盟质疑中国信守国际承诺](/articles/rfa/1045826.md)
 
