--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-22 [梅克尔：德国将捐赠3000万剂疫苗给中低收入国家 – 法国国际广播电台 - RFI](/articles/rfi/1029426.md)
+
 5-22 [日本或冻结对缅甸所有发展援助](/articles/rfi/1029427.md)
 
 5-22 [辉瑞，莫德纳和强生答应向贫困国家供应35亿剂新冠疫苗](/articles/rfi/1029428.md)
@@ -598,6 +600,4 @@
 5-17 [中国天问一号成功着陆火星标志太空飞跃](/articles/rfi/1029724.md)
 
 5-17 [英国防疫限制大松绑 不再禁止亲人拥抱 – 法国国际广播电台 - RFI](/articles/rfi/1029725.md)
-
-5-17 [巴以冲突一周酿200人死亡 以军再发空袭 巴黎挺埃及斡旋调停 - 要闻解说](/articles/rfi/1029726.md)
 
