--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,14 @@
 自由亚洲电台
 ------
 
+5-22 [文在寅与拜登会晤   三星等大厂宣布在美投资](/articles/rfa/1045522.md)
+
+5-22 [下周“全球为中国祷告”   数十人士吁终止中欧引渡协议](/articles/rfa/1045523.md)
+
+5-22 [政治卷入刑案   王靖渝迪拜被拘真相扑朔迷离](/articles/rfa/1045524.md)
+
+5-22 [北大、清华附中的特权  叫“小镇做题家”情何以堪](/articles/rfa/1045525.md)
+
 5-22 [撑港网友发起“5201314”活动 指代“我愿荣光归香港”](/articles/rfa/1045526.md)
 
 5-22 [立陶宛国会认定：中国对新疆维吾尔人犯下种族灭绝罪](/articles/rfa/1045527.md)
@@ -592,12 +600,4 @@
 4-20 [网络炫富视频恐激起民怨   官媒倡禁网上高档消费讯息](/articles/rfa/1045820.md)
 
 4-20 [鸿海美国设厂补贴大缩水 未来可能改投资电动车](/articles/rfa/1045821.md)
-
-4-20 [习近平再强推“一带一路”   学者指中、西方冷战已开打](/articles/rfa/1045822.md)
-
-4-20 [温家宝撰文呼吁正义  他是在作秀吗？](/articles/rfa/1045823.md)
-
-4-20 [新疆涉反人类罪行 人权组织吁UN介入调查](/articles/rfa/1045824.md)
-
-4-20 [文科生太多不利于社会转型?  文科重要性之辨](/articles/rfa/1045825.md)
 
