--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-22 [美国海关扣押了一批优衣库涉嫌新疆强迫劳动的产品](/articles/voa/1040634.md)
+
+5-22 [焦点对话: 拜登对中佈局 文在寅左右为难？](/articles/voa/1040635.md)
+
 5-22 [英“伊丽莎白女王”号航母启程前往亚洲，约翰逊：我们相信国际海洋法](/articles/voa/1040636.md)
 
 5-22 [斯里兰卡议会同意设立专门机构监督中国开发项目](/articles/voa/1040637.md)
@@ -596,8 +600,4 @@
 5-9 [美国将加入打击网络暴力的“基督城呼吁”行动](/articles/voa/1040932.md)
 
 5-9 [香港民调：近6成人反对修改选制 学者指投白票废票率或创新高](/articles/voa/1040933.md)
-
-5-9 [中国压力下俄能源巨头放弃南中国海与越南合作项目](/articles/voa/1040934.md)
-
-5-9 [欧盟驻中国大使：不寻求加剧与中国的紧张关系，正与中国合作为投资协定创造“政治空间”](/articles/voa/1040935.md)
 
