--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+5-22 [美元受美国强劲PMI数据提振上涨 但周线仍下跌](/articles/reuters/1037796.md)
+
+5-22 [美股道指受强劲经济数据提振收高 标普500指数和纳指收低](/articles/reuters/1037797.md)
+
 5-21 [《图表新闻》五大主题：通胀只是一时 还是成为常态？](/articles/reuters/1037798.md)
 
 5-21 [经济稳中加固中国4月财政收入同比增近三成 支出进度放缓4月同比转负](/articles/reuters/1037799.md)
@@ -596,8 +600,4 @@
 5-14 [日本意外宣布决定增加三个府县实施紧急状态](/articles/reuters/1038094.md)
 
 5-14 [金融危机以来国际资本流动出现新渠道--报告](/articles/reuters/1038095.md)
-
-5-14 [气候峰会主办国英国希望促成全球协议 停止对煤炭项目的跨境融资](/articles/reuters/1038096.md)
-
-5-14 [辉瑞疫苗第二针晚点打 产生的抗体更多--研究](/articles/reuters/1038097.md)
 
