--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-22 [美国会共和党人推新法 将对中国间谍、知识产权盗窃者拒发签证](/articles/voa/1040624.md)
+
+5-22 [美参院积极推动中国法案 新增动议为港人提供庇护、防止中国盗窃](/articles/voa/1040625.md)
+
 5-22 [拜登、文在寅宣布美韩疫苗合作](/articles/voa/1040626.md)
 
 5-22 [“压迫每天都在发生”：新疆生活多年的西方人士诉说亲历见闻](/articles/voa/1040627.md)
@@ -596,8 +600,4 @@
 5-9 [阿富汗首都学校爆炸丧生人数已近60](/articles/voa/1040922.md)
 
 5-9 [中共出台反间谍新规 外企经营更具挑战性](/articles/voa/1040923.md)
-
-5-9 [美国放弃疫苗专利 希望造福世界，而非推动中国生物技术](/articles/voa/1040924.md)
-
-5-9 [中国火箭残骸坠落印度洋 美国宇航局批评中方不负责任](/articles/voa/1040925.md)
 
