--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,22 @@
 路透
 ------
 
+5-22 [白宫将基础设施提案缩减至1.7万亿美元 共和党人反对态度不改](/articles/reuters/1037779.md)
+
+5-22 [云南漾濞6.4级地震三死27人伤 青海玛多7.4级地震是汶川后中国震级最高一次](/articles/reuters/1037780.md)
+
+5-22 [比特币一度重挫逾11% 此前中国打击比特币挖矿和交易行为](/articles/reuters/1037781.md)
+
+5-22 [SEC批准纳斯达克的提案 允许企业以直接上市集资替代IPO](/articles/reuters/1037782.md)
+
+5-22 [IMF公布500亿美元提案 力求通过加快疫苗接种来结束大流行](/articles/reuters/1037783.md)
+
+5-22 [焦点：欧元区财长对复苏前景感到乐观 且不甘心落后于中国和美国](/articles/reuters/1037784.md)
+
+5-22 [英国伊丽莎白女王号航母首航亚洲是向中国等国表明我们相信国际海洋法--首相](/articles/reuters/1037785.md)
+
+5-22 [中国金融委：强化平台企业金融活动监管 打击比特币挖矿和交易行为](/articles/reuters/1037786.md)
+
 5-22 [焦点：欧元区企业活动增长创三年最高 但欧洲央行总裁拉加德出言谨慎](/articles/reuters/1037787.md)
 
 5-22 [独家：波音计划2022年秋季将其737 MAX机型产量猛增至每月42架--消息](/articles/reuters/1037788.md)
@@ -584,20 +600,4 @@
 5-14 [美指转弱人民币收升逾200点 通胀担忧缓解关注美零售数据](/articles/reuters/1038077.md)
 
 5-14 [中国银保监会公布第三批重大违法违规股东 四川信托四大问题股东在列](/articles/reuters/1038078.md)
-
-5-14 [分析：通胀压力骤升、股市剧烈震荡 投资人寻求避险](/articles/reuters/1038079.md)
-
-5-14 [中国财政部：6月12日起对部分成品油视同石脑油/燃料油征收进口环节消费税](/articles/reuters/1038080.md)
-
-5-14 [中国股市周线收高逾2% 受金融及医药卫生类股推动](/articles/reuters/1038081.md)
-
-5-14 [独家：台积电料扩大美国投资 与欧洲谈判进展有限--消息人士](/articles/reuters/1038082.md)
-
-5-14 [独家：特斯拉正与中国亿纬锂能洽谈电池供应合约--消息人士](/articles/reuters/1038083.md)
-
-5-14 [中国重要财经新闻一周回顾](/articles/reuters/1038084.md)
-
-5-14 [现代汽车计划到2025年在美国投资74亿美元 侧重电动汽车生产](/articles/reuters/1038085.md)
-
-5-14 [有消息称东芝欧洲业务受到网络攻击 公司表示正在调查](/articles/reuters/1038086.md)
 
