--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-22 [奈及利亚陆军参谋长坠机亡 北部平乱时刻受冲击 – 法国国际广播电台 - RFI](/articles/rfi/1029413.md)
+
 5-22 [中欧投资协议流产 出乎习近平意料？](/articles/rfi/1029414.md)
 
 5-22 [深圳摩天大厦连续三日晃动后紧急关闭](/articles/rfi/1029415.md)
@@ -598,6 +600,4 @@
 5-18 [美国将出口2000万剂疫苗](/articles/rfi/1029711.md)
 
 5-18 [赛诺菲（Sanofi）和葛兰素史克（GSK）研发的疫苗有望在年底上市](/articles/rfi/1029712.md)
-
-5-18 [面对中国前戴琪的务实之策 - 要闻分析](/articles/rfi/1029713.md)
 
