--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-22 [阜成门六号院 | “文革”新贵的奢靡腐化生活：文革真的没有腐败吗？](/articles/cdt/382322.md)
+
 5-21 [骚客文艺｜佟丽娅官宣了，从来没有任何一个时代像今天这样为离婚鼓掌](/articles/cdt/382330.md)
 
 5-22 [【立此存照】周迅：文艺志愿者“学党史，传精神，跟党走”](/articles/cdt/382331.md)
@@ -598,6 +600,4 @@
 4-16 [端传媒 | 空前挤压与畸形生长：中国女权的内忧外困（节选）](/articles/cdt/383671.md)
 
 4-16 [独立鱼电影 | 一夜之间，全体下架，这举报真恶心](/articles/cdt/383672.md)
-
-4-16 [【立此存照】“知网？是个什么恨国公知网站吗？”](/articles/cdt/383673.md)
 
