--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-22 [旅客完成疫苗接种  西班牙6/7起准许入境观光 – 法国国际广播电台 - RFI](/articles/rfi/1029410.md)
+
 5-22 [IMF提500亿美元计画 2022让全球6成人口接种疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1029411.md)
 
 5-22 [德公告英国为变异病毒疫区 旅客入境应隔离两周 – 法国国际广播电台 - RFI](/articles/rfi/1029412.md)
@@ -598,6 +600,4 @@
 5-18 [以色列炸毁加沙媒体大楼     布林肯要求给交代](/articles/rfi/1029708.md)
 
 5-18 [马克龙宣布免除苏丹近50亿美元债务](/articles/rfi/1029709.md)
-
-5-18 [中国正式实施 满16岁才能进行网路直播](/articles/rfi/1029710.md)
 
