--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-22 [中国打击加密货币采矿和交易行为加大比特币跌幅](/articles/voa/1040622.md)
+
+5-22 [尽管多次尝试美国防长至今无法与中国军方高层对话](/articles/voa/1040623.md)
+
 5-22 [美国会共和党人推新法 将对中国间谍、知识产权盗窃者拒发签证](/articles/voa/1040624.md)
 
 5-22 [美参院积极推动中国法案 新增动议为港人提供庇护、防止中国盗窃](/articles/voa/1040625.md)
@@ -596,8 +600,4 @@
 5-10 [国际政局突变 安全因素或成为普京对华能源外交新卖点](/articles/voa/1040920.md)
 
 5-10 [印度单日新冠肺炎死亡人数继续破纪录 疫苗氧气供应短缺](/articles/voa/1040921.md)
-
-5-9 [阿富汗首都学校爆炸丧生人数已近60](/articles/voa/1040922.md)
-
-5-9 [中共出台反间谍新规 外企经营更具挑战性](/articles/voa/1040923.md)
 
