--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-22 [【立此存照】环球时报 | 侮辱攻击袁隆平院士，这些微博账号被关号一年](/articles/cdt/382316.md)
+
+5-22 [知识分子 | 饶毅：55年前，袁隆平发表论文的意义](/articles/cdt/382317.md)
+
 5-22 [黄章晋 | 袁隆平神话：杂交水稻之父是怎样升起的？](/articles/cdt/382320.md)
 
 5-22 [阜成门六号院 | “文革”新贵的奢靡腐化生活：文革真的没有腐败吗？](/articles/cdt/382322.md)
@@ -596,8 +600,4 @@
 4-16 [【404文库】百度知道｜不得发布“习近平是傻逼”一类的涉政内容](/articles/cdt/383663.md)
 
 4-16 [回声Huisheng | 一个女权主义者的自白：我无法再继续对这场网暴保持沉默](/articles/cdt/383666.md)
-
-4-16 [【立此存照】编辑的艺术：把7700万一抹，印象大不同](/articles/cdt/383668.md)
-
-4-16 [端传媒 | 空前挤压与畸形生长：中国女权的内忧外困（节选）](/articles/cdt/383671.md)
 
