--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+5-22 [台湾：中国利用疫情发起“认知作战”](/articles/dw/1042340.md)
+
+5-22 [全球健康峰會：日本首相替台灣發聲](/articles/dw/1042341.md)
+
+5-22 [值得警惕！德国学校反犹现象增加](/articles/dw/1042342.md)
+
 5-22 [“铁一般”的联盟：文在寅美国之行收获颇丰](/articles/dw/1042343.md)
 
 5-22 [“我们简直是在拿生命开玩笑“：印度火葬场的工人](/articles/dw/1042344.md)
@@ -594,10 +600,4 @@
 5-5 [白宫印太事务官：不会声明保卫台湾](/articles/dw/1042638.md)
 
 5-5 [欧中关系恶化 投资协议批准暂无望](/articles/dw/1042639.md)
-
-5-4 [德国外长马斯呼吁西方七国共同制定对华战略](/articles/dw/1042640.md)
-
-5-4 [德语媒体：“中国陷阱”与“中国情结”](/articles/dw/1042641.md)
-
-5-4 [菲律宾外长向北京道歉 杜特尔特打中国疫苗](/articles/dw/1042642.md)
 
