--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-22 [台帛旅游泡泡因疫情喊卡 帛琉总统：可行便重启 – 法国国际广播电台 - RFI](/articles/rfi/1029401.md)
+
 5-22 [国际奥委会副主席称在紧急事态之下也将按时举办奥运会](/articles/rfi/1029402.md)
 
 5-22 [断交流：港控台支持暴力示威者台反批蔑视民主法治反映港府心虚](/articles/rfi/1029403.md)
@@ -598,6 +600,4 @@
 5-18 [多枚火箭从黎巴嫩飞来 以色列炮火回击 – 法国国际广播电台 - RFI](/articles/rfi/1029699.md)
 
 5-18 [拜登告知尼坦雅胡 支持以巴停火 – 法国国际广播电台 - RFI](/articles/rfi/1029700.md)
-
-5-18 [一个又一个的成功，中国坦然接受世界第二大太空强国的地位 - 法国世界报](/articles/rfi/1029701.md)
 
