--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+5-22 [多次称“中国病毒” 特朗普遭华裔民权联盟控告](/articles/dw/1042334.md)
+
+5-22 [英国航母即将前往亚洲 约翰逊: 绝非要对抗中国](/articles/dw/1042335.md)
+
+5-22 [中国云南、青海两地先后发生强烈地震](/articles/dw/1042336.md)
+
+5-22 [“为了能自在握住男友的手 我们离开波兰”](/articles/dw/1042337.md)
+
 5-22 [Fifi和Tarmu的故事：为了能自在握住男友的手 我们离开波兰](/articles/dw/1042338.md)
 
 5-22 [印度新冠病人中致命“黑真菌症”激增](/articles/dw/1042339.md)
@@ -592,12 +600,4 @@
 5-5 [研究：新冠之年人权自由遭侵蚀](/articles/dw/1042632.md)
 
 5-5 [一年后，德国医院仍在超负荷运转](/articles/dw/1042633.md)
-
-5-5 [盖茨夫妇离婚后  基金会何去何从？](/articles/dw/1042634.md)
-
-5-5 [终于来了！德国为新冠接种和痊愈者“松绑”](/articles/dw/1042635.md)
-
-5-5 [美国商务部施压台积电  优先提供车用芯片](/articles/dw/1042636.md)
-
-5-5 [缅甸流亡记者：人民终将胜利](/articles/dw/1042637.md)
 
