--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,9 +3,11 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-22 [苹果日报 | 个人崇拜疑搞过头　紧急降温 北京下令撤习近平画像](/articles/cdt/382311.md)
+
 5-22 [美国之音 | 习近平插队的梁家河变微博敏感词](/articles/cdt/382315.md)
 
-5-22 [【立此存照】环球时报 | 侮辱攻击袁隆平院士，这些微博账号被关号一年](/articles/cdt/382316.md)
+5-22 [【立此存照】这些人因为攻击袁隆平被拘押、封号](/articles/cdt/382316.md)
 
 5-22 [知识分子 | 饶毅：55年前，袁隆平发表论文的意义](/articles/cdt/382317.md)
 
@@ -598,6 +600,4 @@
 4-17 [【立此存照】中国网 | 全国网警集体入驻抖音 警民互动进入短视频时代](/articles/cdt/383652.md)
 
 4-17 [【网络民议】BCI官网下架涉新疆棉声明 弄得“里外不是人”](/articles/cdt/383659.md)
-
-4-16 [【404文库】百度知道｜不得发布“习近平是傻逼”一类的涉政内容](/articles/cdt/383663.md)
 
