--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+5-22 [拉美-加勒比地区染疫死亡突破100万](/articles/rfi/1029391.md)
+
+5-22 [以巴停火 加萨民众逐渐恢复日常作息 – 法国国际广播电台 - RFI](/articles/rfi/1029392.md)
+
 5-22 [约翰逊：英航母将向中国展示英国相信国际海洋法](/articles/rfi/1029393.md)
 
 5-22 [中国「祝融号」成功驶上火星表面 展开巡视探测工作 – 法国国际广播电台 - RFI](/articles/rfi/1029394.md)
@@ -596,8 +600,4 @@
 5-18 [阿根廷令脸书 暂停WhatsApp资料分享新条款 – 法国国际广播电台 - RFI](/articles/rfi/1029689.md)
 
 5-18 [拜登公布2020年报税资料 总收入逾60万美元近26%用来缴税 – 法国国际广播电台 - RFI](/articles/rfi/1029690.md)
-
-5-18 [不让中俄专美于前 美加码释出2000万剂疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1029691.md)
-
-5-18 [美国研究：辉瑞莫德纳疫苗对印度变种病毒应有效 – 法国国际广播电台 - RFI](/articles/rfi/1029692.md)
 
