--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 5-22 [苹果日报 | 个人崇拜疑搞过头　紧急降温 北京下令撤习近平画像](/articles/cdt/382311.md)
 
+5-22 [念念回声 | 女权主义者梁小门：他们指出的所有“罪状”，每一条我都很自豪](/articles/cdt/382313.md)
+
 5-22 [美国之音 | 习近平插队的梁家河变微博敏感词](/articles/cdt/382315.md)
 
 5-22 [【立此存照】这些人因为攻击袁隆平被拘押、封号](/articles/cdt/382316.md)
@@ -598,6 +600,4 @@
 4-17 [立场新闻 | 专访彭定康：忆身陷囹圄战友 读旧日记信香港重生](/articles/cdt/383630.md)
 
 4-17 [【立此存照】中国网 | 全国网警集体入驻抖音 警民互动进入短视频时代](/articles/cdt/383652.md)
-
-4-17 [【网络民议】BCI官网下架涉新疆棉声明 弄得“里外不是人”](/articles/cdt/383659.md)
 
