--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-22 [贫穷国家“一苗难求” 豁免疫苗专利管用吗？](/articles/voa/1040617.md)
+
+5-22 [流亡藏人领导人呼吁国际社会阻止中共对西藏的文化灭绝](/articles/voa/1040618.md)
+
 5-22 [菲中就海洋争端举行会谈，马尼拉称会谈“友好而坦率”](/articles/voa/1040619.md)
 
 5-22 [洪都拉斯打“疫苗牌” 谁愿意给就跟谁打交道](/articles/voa/1040620.md)
@@ -596,8 +600,4 @@
 5-10 [喀布尔几十名女校学生遇袭被害 中国不谴责塔利班反而责怪美国](/articles/voa/1040915.md)
 
 5-10 [科罗拉多州警方称，持枪者杀死6名成人，自杀身亡](/articles/voa/1040916.md)
-
-5-10 [喀布尔爆炸死亡人数升至63人 塔利班头目欢呼美军和北约部队撤离](/articles/voa/1040917.md)
-
-5-10 [白宫：美国抗击新冠病毒已经“走出困境”](/articles/voa/1040918.md)
 
