--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-23 [【404文库】上海长宁｜奇迹在这里发生：坐轮椅老奶奶听着红歌居然站了起来](/articles/cdt/382303.md)
+
 5-22 [苹果日报 | 个人崇拜疑搞过头　紧急降温 北京下令撤习近平画像](/articles/cdt/382311.md)
 
 5-22 [念念回声 | 女权主义者梁小门：他们指出的所有“罪状”，每一条我都很自豪](/articles/cdt/382313.md)
@@ -598,6 +600,4 @@
 4-17 [多数派 | 微博：崭新暴力形式的温床——你我都是案上鱼肉！](/articles/cdt/383629.md)
 
 4-17 [立场新闻 | 专访彭定康：忆身陷囹圄战友 读旧日记信香港重生](/articles/cdt/383630.md)
-
-4-17 [【立此存照】中国网 | 全国网警集体入驻抖音 警民互动进入短视频时代](/articles/cdt/383652.md)
 
