--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-23 [缅甸军政府：昂山素季将出庭受审](/articles/voa/1040614.md)
+
 5-23 [有心征服珠峰无奈病毒挡道：新冠疫情肆虐世界屋脊](/articles/voa/1040615.md)
 
 5-23 [俄罗斯继续加紧武器装备升级 同时聚焦亚太北极](/articles/voa/1040616.md)
@@ -598,6 +600,4 @@
 5-10 [习近平战略机遇期 促使台海“热区”步步升温？](/articles/voa/1040912.md)
 
 5-10 [下周访美 文在寅希望任期最后一年实现半岛永久和平](/articles/voa/1040913.md)
-
-5-10 [保护本国民众安全为先 菅义伟称从没把主办奥运会放在首位](/articles/voa/1040914.md)
 
