--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-23 [Kita | 生日快乐：记维吾尔学者热依拉·达吾提教授](/articles/cdt/382299.md)
+
 5-23 [【404文库】上海长宁｜奇迹在这里发生：坐轮椅老奶奶听着红歌居然站了起来](/articles/cdt/382303.md)
 
 5-23 [Alfred | 港人流亡日记：赶着回家的孩子](/articles/cdt/382310.md)
@@ -598,6 +600,4 @@
 4-17 [回归常识｜真威武！超生罚款“虽久必究”](/articles/cdt/383626.md)
 
 4-17 [【来龙去脉】香港“818集会案”宣判 9名民主派人士被判囚8至18个月](/articles/cdt/383628.md)
-
-4-17 [多数派 | 微博：崭新暴力形式的温床——你我都是案上鱼肉！](/articles/cdt/383629.md)
 
