--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-23 [哈马斯举行阅兵，最高领导人再次露面](/articles/voa/1040612.md)
+
 5-23 [美泰战略对话重申对防务联盟的承诺](/articles/voa/1040613.md)
 
 5-23 [缅甸军政府：昂山素季将出庭受审](/articles/voa/1040614.md)
@@ -598,6 +600,4 @@
 5-10 [严防死堵 “隔离线”登上珠穆朗玛峰](/articles/voa/1040910.md)
 
 5-10 [基督教网络空间被挤压 习思想登堂入室渗透教会讲道](/articles/voa/1040911.md)
-
-5-10 [习近平战略机遇期 促使台海“热区”步步升温？](/articles/voa/1040912.md)
 
