--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-23 [民主刚果火山喷发 熔岩流进机场 – 法国国际广播电台 - RFI](/articles/rfi/1029372.md)
+
 5-23 [义大利COVID-19疫苗施打作业 突破3000万剂 – 法国国际广播电台 - RFI](/articles/rfi/1029373.md)
 
 5-23 [1958年台海危机 美考虑核武攻击中国保卫台湾 – 法国国际广播电台 - RFI](/articles/rfi/1029374.md)
@@ -598,6 +600,4 @@
 5-18 [日本2020年度GDP呈战后最大下滑](/articles/rfi/1029670.md)
 
 5-18 [墨西哥总统传为1911年华人遭屠杀事件道歉](/articles/rfi/1029671.md)
-
-5-18 [港股上扬逾1%作收 – 法国国际广播电台 - RFI](/articles/rfi/1029672.md)
 
