--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-23 [复星医药：愿将德国BNT疫苗供应台湾](/articles/dw/1042321.md)
+
 5-23 [极端天气 甘肃山地越野赛21人遇难](/articles/dw/1042322.md)
 
 5-23 [2021欧洲歌唱大赛 意大利摇滚胜出](/articles/dw/1042323.md)
@@ -598,6 +600,4 @@
 5-6 [客座评论：放弃专利让全球抗疫迎来新曙光？](/articles/dw/1042619.md)
 
 5-6 [事实核查：新冠疫苗只打一针会有效吗？](/articles/dw/1042620.md)
-
-5-6 [客座评论：中欧投资协定还会柳暗花明吗？](/articles/dw/1042621.md)
 
