--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-23 [女权行动者发声 批当局以爱国为名强化网络暴力](/articles/voa/1040610.md)
+
 5-23 [刚果火山喷发，居民惊恐逃离](/articles/voa/1040611.md)
 
 5-23 [哈马斯举行阅兵，最高领导人再次露面](/articles/voa/1040612.md)
@@ -598,6 +600,4 @@
 5-10 [印度新冠肺炎疫情虽微趋缓 仍接近破纪录高位](/articles/voa/1040908.md)
 
 5-10 [因备份疫情文章被控罪的北京公益志愿者陈玫、蔡伟案将受审](/articles/voa/1040909.md)
-
-5-10 [严防死堵 “隔离线”登上珠穆朗玛峰](/articles/voa/1040910.md)
 
