--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-23 [伊朗称核查人员可能不再会获得核设施图像资料](/articles/voa/1040609.md)
+
 5-23 [女权行动者发声 批当局以爱国为名强化网络暴力](/articles/voa/1040610.md)
 
 5-23 [刚果火山喷发，居民惊恐逃离](/articles/voa/1040611.md)
@@ -598,6 +600,4 @@
 5-11 [蔡英文哥本哈根峰会演说：威权势力正扩张，全球须共同守护民主](/articles/voa/1040907.md)
 
 5-10 [印度新冠肺炎疫情虽微趋缓 仍接近破纪录高位](/articles/voa/1040908.md)
-
-5-10 [因备份疫情文章被控罪的北京公益志愿者陈玫、蔡伟案将受审](/articles/voa/1040909.md)
 
