--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-24 [墙外文摘：台湾防疫，优势如何战胜劣势？](/articles/dw/1042317.md)
+
 5-23 [为抓捕反对派 白俄罗斯拦截飞越领空客机](/articles/dw/1042318.md)
 
 5-23 [梵蒂冈：多位神职人员在中国被捕](/articles/dw/1042319.md)
@@ -598,6 +600,4 @@
 5-6 [德语媒体：默克尔总理的败笔](/articles/dw/1042615.md)
 
 5-6 [复旦开匈牙利分校 中国版“特洛伊木马”？](/articles/dw/1042616.md)
-
-5-6 [报道中国式“法治”：德国之声记者获奖](/articles/dw/1042617.md)
 
