--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-24 [共产党时代波兰知名地下组织展览开幕 当年纲领预言已实现](/articles/voa/1040607.md)
+
+5-24 [在疫情导致全球动荡之时，中国最高外交官访问俄罗斯，两国乘机深化关系](/articles/voa/1040608.md)
+
 5-23 [伊朗称核查人员可能不再会获得核设施图像资料](/articles/voa/1040609.md)
 
 5-23 [女权行动者发声 批当局以爱国为名强化网络暴力](/articles/voa/1040610.md)
@@ -596,8 +600,4 @@
 5-11 [报道称中国曾讨论萨斯病毒武器化](/articles/voa/1040905.md)
 
 5-11 [中国正努力试图实现半导体芯片自给自足 但困难重重](/articles/voa/1040906.md)
-
-5-11 [蔡英文哥本哈根峰会演说：威权势力正扩张，全球须共同守护民主](/articles/voa/1040907.md)
-
-5-10 [印度新冠肺炎疫情虽微趋缓 仍接近破纪录高位](/articles/voa/1040908.md)
 
