--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-24 [中国甘肃山地马拉松遇极端天气至少21人丧生 主办方缺乏应急预案引发公众愤怒](/articles/voa/1040606.md)
+
 5-24 [共产党时代波兰知名地下组织展览开幕 当年纲领预言已实现](/articles/voa/1040607.md)
 
 5-24 [在疫情导致全球动荡之时，中国最高外交官访问俄罗斯，两国乘机深化关系](/articles/voa/1040608.md)
@@ -598,6 +600,4 @@
 5-11 [澳中关系持续紧张 澳大利亚液化气成为下一个两国关系恶化牺牲品？](/articles/voa/1040904.md)
 
 5-11 [报道称中国曾讨论萨斯病毒武器化](/articles/voa/1040905.md)
-
-5-11 [中国正努力试图实现半导体芯片自给自足 但困难重重](/articles/voa/1040906.md)
 
